syntax = "proto3";

package auth;

option go_package = "internal/server/protogen/auth";

message RegisterRequest {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResponse {
  string id = 1;
  string email = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}