syntax = "proto3";

package user;

option go_package = "internal/server/protogen/user";

message RegisterRequest {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResponse {
  string id = 1;
  string email = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
}

message Empty {}

message User {
  string id = 1;
  string email = 2;
  string created_at = 3; // RFC3339
}

message ListUsersResponse {
  repeated User users = 1;
}

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc ListUsers(Empty) returns (ListUsersResponse);
}